--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -20,7 +20,7 @@
             <p>Vous pouvez la prévisualiser et la télécharger à l'étape <a href="{% url 'conventions:preview' convention_uuid=convention.uuid %}">Prévisualisation</a></p>
             <div class="fr-grid-row fr-grid-row--gutters">
 
-                <div class="fr-col-12 fr-col-lg-6 fr-mb-2w">
+                <div class="fr-col-12 fr-mb-2w">
                     <div role="alert" class="fr-alert fr-alert--info">
                         <p class="fr-alert__title">
                             Générer la fiche CAF
@@ -36,104 +36,107 @@
                         </form>
                     </div>
                 </div>
-                <div class="fr-col-12 fr-col-lg-6">
-                    <div role="alert" class="fr-alert fr-alert--warning">
-                        <p class="fr-alert__title">
-                            Résiliation/dénonciation de la convention
-                        </p>
-                        <p class="fr-mb-2w">Vous pouvez ici procéder à la résiliation/dénonciation de la convention dans APiLos.</p>
-                        <form method="post" action="" id="{{resiliation_form.date_resiliation.id_for_label}}_validation_form">
-                            {% csrf_token %}
-                            {% include "common/form/input_date.html" with form_input=resiliation_form.date_resiliation editable=True %}
+                {% if request|is_instructeur %}
+                    <div class="fr-col-12  fr-mb-3w">
+                        <div role="alert" class="fr-alert fr-alert--warning">
+                            <p class="fr-alert__title">
+                                Résiliation/dénonciation de la convention
+                            </p>
+                            <p class="fr-mb-2w">Vous pouvez ici procéder à la résiliation/dénonciation de la convention dans APiLos.</p>
+                            <form method="post" action="" id="{{resiliation_form.date_resiliation.id_for_label}}_validation_form">
+                                {% csrf_token %}
+                                {% include "common/form/input_date.html" with form_input=resiliation_form.date_resiliation editable=True %}
 
-                            <button class="fr-btn apilos-btn--red fr-btn--icon-left fr-fi-delete-line fr-my-2w" data-fr-opened="false" type="button" aria-controls="fr-modal-resiliate-{{convention.uuid}}">
-                                Résilier/Dénoncer la convention
-                            </button>
-                        </form>
-                    </div>
-                    <dialog aria-labelledby="fr-modal-resiliate-{{convention.uuid}}-title" id="fr-modal-resiliate-{{convention.uuid}}" class="fr-modal" role="dialog">
-                        <div class="fr-container fr-container--fluid fr-container-md">
-                            <div class="fr-grid-row fr-grid-row--center">
-                                <div class="fr-col-12 fr-col-md-8 fr-col-lg-6">
-                                    <div class="fr-modal__body">
-                                        <div class="fr-modal__header">
-                                            <button class="fr-link--close fr-link" aria-controls="fr-modal-resiliate-{{convention.uuid}}">Fermer</button>
-                                        </div>
-                                        <div class="fr-modal__content">
-                                            <h1 id="fr-modal-resiliate-{{convention.uuid}}-title" class="fr-modal__title">
-                                                <span class="fr-fi-arrow-right-line fr-fi--lg"></span>
-                                                {{ convention }}
-                                            </h1>
-                                            <p>Vous vous apprétez à résilier/dénoncer la convention "{{convention}}", êtes-vous sûr ?</p>
-                                        </div>
-                                        <div class="fr-modal__footer">
-                                            <ul class="fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left">
-                                                <li>
-                                                    <button type="button" class="fr-btn fr-btn--icon-left fr-fi-delete-line" id='resiliate_{{convention.uuid}}'>
-                                                        Résilier/dénoncer la convention
-                                                    </button>
-                                                    <script type="text/javascript" nonce="{{request.csp_nonce}}">
-                                                        document.getElementById('resiliate_{{convention.uuid}}').addEventListener('click', function(){
-                                                            document.getElementById('{{resiliation_form.date_resiliation.id_for_label}}_validation_form').submit();
-                                                        });
-                                                    </script>
-                                                </li>
-                                                <li>
-                                                    <button type="button" class="fr-btn fr-btn--secondary" aria-controls="fr-modal-resiliate-{{convention.uuid}}">Annuler</button>
-                                                </li>
-                                            </ul>
+                                <button class="fr-btn apilos-btn--red fr-btn--icon-left fr-fi-delete-line fr-my-2w" data-fr-opened="false" type="button" aria-controls="fr-modal-resiliate-{{convention.uuid}}">
+                                    Résilier/Dénoncer la convention
+                                </button>
+                            </form>
+                        </div>
+                        <dialog aria-labelledby="fr-modal-resiliate-{{convention.uuid}}-title" id="fr-modal-resiliate-{{convention.uuid}}" class="fr-modal" role="dialog">
+                            <div class="fr-container fr-container--fluid fr-container-md">
+                                <div class="fr-grid-row fr-grid-row--center">
+                                    <div class="fr-col-12 fr-col-md-8 fr-col-lg-6">
+                                        <div class="fr-modal__body">
+                                            <div class="fr-modal__header">
+                                                <button class="fr-link--close fr-link" aria-controls="fr-modal-resiliate-{{convention.uuid}}">Fermer</button>
+                                            </div>
+                                            <div class="fr-modal__content">
+                                                <h1 id="fr-modal-resiliate-{{convention.uuid}}-title" class="fr-modal__title">
+                                                    <span class="fr-fi-arrow-right-line fr-fi--lg"></span>
+                                                    {{ convention }}
+                                                </h1>
+                                                <p>Vous vous apprétez à résilier/dénoncer la convention "{{convention}}", êtes-vous sûr ?</p>
+                                            </div>
+                                            <div class="fr-modal__footer">
+                                                <ul class="fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left">
+                                                    <li>
+                                                        <button type="button" class="fr-btn fr-btn--icon-left fr-fi-delete-line" id='resiliate_{{convention.uuid}}'>
+                                                            Résilier/dénoncer la convention
+                                                        </button>
+                                                        <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                                                            document.getElementById('resiliate_{{convention.uuid}}').addEventListener('click', function(){
+                                                                document.getElementById('{{resiliation_form.date_resiliation.id_for_label}}_validation_form').submit();
+                                                            });
+                                                        </script>
+                                                    </li>
+                                                    <li>
+                                                        <button type="button" class="fr-btn fr-btn--secondary" aria-controls="fr-modal-resiliate-{{convention.uuid}}">Annuler</button>
+                                                    </li>
+                                                </ul>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </dialog>
-                </div>
+                        </dialog>
+                    </div>
+                {% endif %}
             </div>
             <p>Prochainement, vous pourrez créer des avenants</p>
 
+            {% if request|is_instructeur %}
+                <div class="fr-accordion fr-mt-5w">
+                    <div class="fr-accordion__title">
+                        <div class="fr-accordion__btn clickable " aria-expanded="false" aria-controls="accordion-106"><em>Si nécessaire, vous pouvez téléverser une nouvelle version de la convention signée ici.</em></div>
+                    </div>
+                    <div class="fr-collapse" id="accordion-106">
 
-            <div class="fr-accordion fr-mt-5w">
-                <div class="fr-accordion__title">
-                    <div class="fr-accordion__btn clickable " aria-expanded="false" aria-controls="accordion-106"><em>Si nécessaire, vous pouvez téléverser une nouvelle version de la convention signée ici.</em></div>
-                </div>
-                <div class="fr-collapse" id="accordion-106">
-
-                    <form method="post" action="{% url 'conventions:sent' convention_uuid=convention.uuid %}" enctype="multipart/form-data" id="{{upform.file.id_for_label}}_form">
-                        {% csrf_token %}
-                        <input
-                            class="fileinput--hidden"
-                            type="file"
-                            id="{{upform.file.id_for_label}}"
-                            name="{{upform.file.html_name}}"
-                            accept="application/pdf">
-                        <div class="block--row-strech">
-                            <div>
-                                <button id="{{upform.file.id_for_label}}_upload_button" class="fr-btn fr-icon-upload-line fr-btn--icon-left" type="button">
-                                    Téléverser la convention signée
-                                </button>
-                                {% for error in upform.file.errors %}
-                                    <p id="text-input-error-desc-error" class="fr-error-text">
-                                        {{ error }}
-                                    </p>
-                                {% endfor %}
+                        <form method="post" action="{% url 'conventions:sent' convention_uuid=convention.uuid %}" enctype="multipart/form-data" id="{{upform.file.id_for_label}}_form">
+                            {% csrf_token %}
+                            <input
+                                class="fileinput--hidden"
+                                type="file"
+                                id="{{upform.file.id_for_label}}"
+                                name="{{upform.file.html_name}}"
+                                accept="application/pdf">
+                            <div class="block--row-strech">
+                                <div>
+                                    <button id="{{upform.file.id_for_label}}_upload_button" class="fr-btn fr-icon-upload-line fr-btn--icon-left" type="button">
+                                        Téléverser la convention signée
+                                    </button>
+                                    {% for error in upform.file.errors %}
+                                        <p id="text-input-error-desc-error" class="fr-error-text">
+                                            {{ error }}
+                                        </p>
+                                    {% endfor %}
+                                </div>
                             </div>
-                        </div>
 
-                        <script type="text/javascript" nonce="{{request.csp_nonce}}">
-                            document.getElementById('{{upform.file.id_for_label}}_upload_button').onclick = function() {
-                                document.getElementById('{{upform.file.id_for_label}}').click();
-                            };
-                            document.getElementById('{{upform.file.id_for_label}}').onchange = function() {
-                                var input = document.createElement('input');
-                                input.setAttribute('name', 'Upload');//set the param name
-                                input.setAttribute('value', 'True');//set the value
-                                this.form.appendChild(input)
-                                document.getElementById("{{upform.file.id_for_label}}_form").submit();
-                            }
-                        </script>
-                    </form>
+                            <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                                document.getElementById('{{upform.file.id_for_label}}_upload_button').onclick = function() {
+                                    document.getElementById('{{upform.file.id_for_label}}').click();
+                                };
+                                document.getElementById('{{upform.file.id_for_label}}').onchange = function() {
+                                    var input = document.createElement('input');
+                                    input.setAttribute('name', 'Upload');//set the param name
+                                    input.setAttribute('value', 'True');//set the value
+                                    this.form.appendChild(input)
+                                    document.getElementById("{{upform.file.id_for_label}}_form").submit();
+                                }
+                            </script>
+                        </form>
+                    </div>
                 </div>
-            </div>
+            {% endif %}
         </div>
 {% endblock %}
