--- a/templates/conventions/actions/delete.html
+++ b/templates/conventions/actions/delete.html
@@ -1,5 +1,5 @@
 <div class="fr-col-12 block--row-strech apilos-line-top">
-    <div class="block--row-strech-1">
+    <div class="block--row-strech-1 fr-my-2w">
         <p class="fr-alert__title">
             Supprimer ce projet {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %}
         </p>
