--- a/templates/conventions/actions/generate_convention.html
+++ b/templates/conventions/actions/generate_convention.html
@@ -1,15 +1,16 @@
 <div class="fr-col-12 block--row-strech apilos-line-top">
-    <div class="block--row-strech-1">
+    <div class="block--row-strech-1 fr-my-2w">
         <p class="fr-alert__title">
             Télécharger le projet {% if convention.is_avenant %}d'avenant à {% endif %}de convention (en docx)
         </p>
         {% if not convention.type1and2_configuration_not_needed %}
             <p>
-                Avant de pouvoir générer un document {% if convention.is_avenant %}d'avenant à la convention{% else %}de convention{% endif %}, il vous faut préciser le type de convention I ou II et les options associées dans la section <strong>Convention de type I & II</strong>
+                Avant de pouvoir générer un document {% if convention.is_avenant %}d'avenant à la convention{% else %}de convention{% endif %}, il vous faut préciser le type de convention I ou II et les options associées dans la section <strong>Convention de type I & II ci-dessus.</strong>
             </p>
-            <button class="fr-btn fr-my-1w" disabled>
-                Générer la convention
+            <button class="fr-btn fr-btn--secondary fr-my-1w fr-icon-download-line fr-btn--icon-left" disabled>
+                Télécharger
             </button>
+            </div>
         {% else %}
             <p>
                 Attention, {% if convention.is_avenant %}l'avenant à la convention{% else %}la convention{% endif %} n’est pas encore validé{% if not convention.is_avenant %}e{% endif %}, ce document est fourni à titre indicatif.
