--- a/templates/conventions/actions/instructeur_validation.html
+++ b/templates/conventions/actions/instructeur_validation.html
@@ -1,30 +1,24 @@
 {% load custom_filters %}
 {% if request|is_instructeur and convention.display_options.display_validation %}
-    <div class="fr-col-md-12  fr-py-5w">
-        <div role="alert" class="fr-alert fr-alert--warning">
+    <div class="fr-col-md-12 fr-py-5w apilos-line-top">
+        <p class="fr-alert__title">Valider {% if convention.is_avenant %}l'avenant{% else %}la convention{% endif %}</p>
+        <div role="alert">
             {% with editable_validation=convention.type1and2_configuration_not_needed %}
                 {% if editable_validation %}
-                    {% if convention.is_avenant %}
-                        <p class="fr-mb-3w">Une fois l'avenant de la convention généré, si celui-ci correspond aux attendus, vous pouvez l'envoyer au bailleur par email et cliquer sur la bouton ci-dessous.
-                            Cela nous permet de suivre le statut de la convention en temps réel.</p>
-                    {% else %}
-                        <p class="fr-mb-3w">Une fois la convention générée, si celle-ci correspond aux attendus, vous pouvez l'envoyer au bailleur par email et cliquer sur la bouton ci-dessous.
-                            Cela nous permet de suivre le statut de la convention en temps réel.</p>
-                    {% endif %}
+                    <p class="fr-mb-3w">Vous pouvez associer un numéro {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %} et valider {% if convention.is_avenant %}celui-ci{% else %}celle-ci{% endif %}. {% if convention.is_avenant %}Il{% else %}Elle{% endif %} sera automatiquement transmise au bailleur par email pour signature.</p>
                 {% else %}
                     <p class="fr-mb-3w">Avant de pouvoir valider la convention, il vous faut préciser le type de convention I ou II et les options associées dans la section
-                        <strong>Convention de type I & II</strong></p>
+                        <strong>Convention de type I & II ci-dessus.</strong></p>
                 {% endif %}
                 <div>
                     <form method="post" action="{% url 'conventions:validate' convention_uuid=convention.uuid %}" data-turbo="false">
                         {% csrf_token %}
-                        <p class="fr-h4">Associer un numéro {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %}</p>
                         <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--bottom">
                             <div class="fr-col-12 fr-col-md-6">
                                 {% include "common/form/input_text.html" with form_input=conventionNumberForm.convention_numero editable=editable_validation %}
                             </div>
                             <div class="fr-col-12 fr-col-md-6">
-                                <button class="fr-btn" {% if not editable_validation %}disabled{% endif %}>
+                                <button class="fr-btn fr-btn--secondary" {% if not editable_validation %}disabled{% endif %}>
                                     Valider {% if convention.is_avenant %}l'avenant de {% endif %}la convention
                                 </button>
                             </div>
