--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -488,10 +488,11 @@
                             {% include "conventions/actions/back_to_instruction.html" %}
                         {% endif %}
                     </div>
-                    <div class="fr-grid-row fr-grid-row--gutters fr-my-5w">
-                        {% include "conventions/actions/delete.html"%}
-                    </div>
-
+                    {% if request|is_bailleur and convention.is_project %}
+                        <div class="fr-grid-row fr-grid-row--gutters fr-my-5w">
+                            {% include "conventions/actions/delete.html"%}
+                        </div>
+                    {% endif %}
 
                     {% include "conventions/actions/instructeur_validation.html" %}
 
@@ -509,10 +510,10 @@
                 </turbo-frame>
 
 
-                <div class="fr-grid-row fr-grid-row--gutters">
+                <div class="fr-grid-row fr-grid-row--gutters apilos-line-top">
                     <div class="fr-col-12">
 
-                        <div class="form-button-footer fr-col-md-12 fr-py-5w">
+                        <div class="fr-col-md-12 fr-py-5w">
                             {% if request|is_bailleur %}
                                 {% if convention.is_bailleur_editable %}
                                     {% include "common/button/previous.html" with precedent='conventions:comments' convention_uuid=convention.uuid %}
