--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -15,25 +15,57 @@
             {% else %}
                 <p class="fr-h3">Votre convention signée a déjà été téléversée</p>
             {% endif %}
-            <p>Vous pouvez la prévisualiser et la télécharger à l'étape <a href="{% url 'conventions:preview' convention_uuid=convention.uuid %}">Prévisualisation</a></p>
-            <div class="fr-grid-row fr-grid-row--gutters">
-
-                <div class="fr-col-12 fr-mb-2w">
+            {% if request|is_bailleur %}
+                <div class="fr-col-md-12">
                     <div role="alert" class="fr-alert fr-alert--info">
+                        <p class="fr-alert__title">
+                            Avenants
+                        </p>
+                        <p>
+                            L'avenant créé sera automatiquement rattaché à la convention actuelle.
+                        </p>
+                        <div>
+                            <a class="fr-btn fr-my-1w" href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">
+                                <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
+            <div class="fr-grid-row fr-grid-row--gutters">
+                <div class="fr-col-12 fr-mb-2w block--row-strech apilos-line-top">
+                    <div class="block--row-strech-1 fr-my-2w">
                         <p class="fr-alert__title">
                             Générer la fiche CAF
                         </p>
                         <p>
                             La fiche CAF sera générée en format docx et téléchargée automatiquement.
                         </p>
-                        <form action="{% url 'conventions:fiche_caf' convention_uuid=convention.uuid %}">
-                            {% csrf_token %}
-                            <button class="fr-btn fr-my-1w">
-                                Générer la fiche CAF
-                            </button>
-                        </form>
                     </div>
+                    <form action="{% url 'conventions:fiche_caf' convention_uuid=convention.uuid %}">
+                        {% csrf_token %}
+                        <button class="fr-btn fr-my-1w fr-btn--secondary fr-my-1w fr-icon-download-line fr-btn--icon-left">
+                            Générer la fiche CAF
+                        </button>
+                    </form>
                 </div>
+            </div>
+            <div class="fr-grid-row fr-grid-row--gutters">
+                <div class="fr-col-12 fr-mb-2w block--row-strech apilos-line-top">
+                    <div class="block--row-strech-1 fr-my-2w">
+                        <p class="fr-alert__title">
+                            Voir la conventions signée (en PDF)
+                        </p>
+                        <p>
+                            Vous pouvez la prévisualiser et la télécharger.
+                        </p>
+                    </div>
+                    <button class="fr-btn fr-btn--secondary fr-my-1w fr-icon-eye-line fr-btn--icon-left">
+                        <a href="{% url 'conventions:preview' convention_uuid=convention.uuid %}">Consulter</a>
+                    </button>
+                </div>
+            </div>
+            <div class="fr-grid-row fr-grid-row--gutters">
                 {% if request|is_instructeur %}
                     <div class="fr-col-12  fr-mb-3w">
                         <div role="alert" class="fr-alert fr-alert--warning">
@@ -90,23 +122,7 @@
                     </div>
                 {% endif %}
             </div>
-            {% if request|is_bailleur %}
-                <div class="fr-col-md-12">
-                    <div role="alert" class="fr-alert fr-alert--info">
-                        <p class="fr-alert__title">
-                            Avenants
-                        </p>
-                        <p>
-                            L'avenant créé sera automatiquement rattaché à la convention actuelle.
-                        </p>
-                        <div>
-                            <a class="fr-btn fr-my-1w" href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">
-                                <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            {% endif %}
+            <div class="apilos-line-top"></div>
             {% include "conventions/avenant_list.html" with conventions=avenants %}
 
             {% if request|is_instructeur %}
