--- a/static/css/ui_siap.css
+++ b/static/css/ui_siap.css
@@ -2,24 +2,12 @@
   flex: unset;
   position: relative
 }
-/* .fr-nav__btn[aria-controls="menu-/operation"] {
-  position: relative;
-} */
+
 .fr-nav__btn[aria-controls="list-habilitation"]::before {
   display: none!important;
 }
-/* .fr-nav__btn[aria-controls="menu-/operation"]::before {
-  content: "";
-  display: none;
-  background-color: var(--background-active-blue-france);
-  position: absolute;
-  top: auto;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  margin-top: 0;
-} */
+
+
 .orange-background,
 .fr-nav__btn[aria-current].orange-background,
 .fr-nav__btn[aria-current].orange-background:hover,
@@ -29,14 +17,11 @@
   text-decoration: none;
 }
 
-.navy-background,
-.navy-background a:hover {
-  background-color: var(--background-action-high-blue-france);
-  color: #fff
+.habilitation-bloc .fr-btn {
+  display: block;
+  text-align: left;
 }
-.navy-background:hover {
-  background-image: radial-gradient(circle, rgba(17, 17, 255, 0.3), rgba(17, 17, 255, 0.3) 3%);
-}
+
 .habilitation-bloc {
   position: absolute;
   background: #FFFFFF;
@@ -49,6 +34,12 @@
   margin-right: 0;
   box-shadow: 0 16px 16px -16px #00000052,0 8px 16px #0000001a;
 }
+
+.habilitation-bloc ul{
+  overflow-y: auto;
+  max-height: 400px;
+}
+
 .habilitation-bloc .fr-menu__list {
   padding: 0;
 }
