--- a/static/css/main.css
+++ b/static/css/main.css
@@ -37,7 +37,9 @@
 .fr-link--sm {
   padding: 0.25rem 0.5rem;
 }
-
+#recap_navigation {
+  border-bottom: solid 1px var(--border-default-grey);
+}
 .notes {
   color: #6A6A6A;
 }
@@ -691,7 +693,7 @@ button:not(:disabled).apilos-btn--secondary--red:hover {
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 0;
-  z-index: 998;
+  z-index: 10000;
 }
 
 /*
