--- a/templates/conventions/actions/back_to_instruction.html
+++ b/templates/conventions/actions/back_to_instruction.html
@@ -1,5 +1,5 @@
 <div class="fr-col-12">
-    <div class="block--row-strech fr-my-2w fr-mr-6w">
+    <div class="block--row-strech fr-my-2w">
         <div class="block--row-strech-1 fr-my-2w fr-mr-6w">
             <p class="fr-alert__title">
                 Repasser cette convention en "Instruction requise"
