--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -7,6 +7,7 @@
 {% block content %}
     <div class="fr-container-fluid ds_banner">
         {% include "conventions/common/form_header.html"%}
+        {% include "common/nav_bar.html"%}
         <div class="fr-container fr-py-5w">
             <div class="fr-col-md-12 fr-mt-2w fr-mb-4w">
                 <div role="alert" class="fr-alert fr-alert--success">
@@ -24,7 +25,7 @@
                         <p class="fr-alert__title">
                             Créer un avenant
                         </p>
-                        <p>Votre projet a évolué. Vous avez identifié des informations erronées ou caduque ?</p>
+                        <p>Votre projet a évolué. Vous avez identifié des informations erronées ou caduques ?</p>
                         <div class="block--row-strech">
                             <a class="fr-btn fr-my-1w fr-mr-2w" href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">
                                 <span class="fr-fi-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
