--- a/templates/conventions/sent.html
+++ b/templates/conventions/sent.html
@@ -7,6 +7,7 @@
 {% block content %}
     <div class="fr-container-fluid ds_banner">
         {% include "conventions/common/form_header.html"%}
+        {% include "common/nav_bar.html"%}
         <div class="fr-container fr-py-5w">
             {% if request|is_instructeur %}
                 <div role="alert" class="fr-alert fr-alert--info fr-icon-arrow-right-s-line-double">
@@ -71,7 +72,7 @@
                 <div class="fr-mb-2w fr-pt-2w block--row-strech apilos-line-top">
                     <div class="block--row-strech-1 fr-my-2w">
                         <p class="fr-alert__title">
-                            Voir la conventions signée (en PDF)
+                            Voir la conventions (en PDF)
                         </p>
                         <p>
                             Vous pouvez la prévisualiser et la télécharger.
