--- a/templates/conventions/cadastre.html
+++ b/templates/conventions/cadastre.html
@@ -51,22 +51,32 @@
                                         <legend hidden>Choix de la date d'achevement</legend>
                                         <div class="fr-fieldset__content">
                                             <div class="fr-radio-group">
-                                                <input type="radio" value= "achevement" id="achevement" name="achevement" class="achevement_choice_button">
+                                                <input type="radio" value= "achevement" id="achevement" name="achevement" class="achevement_choice_button"
+                                                    {% if convention.programme.date_achevement %} checked {% endif %}
+                                                >
                                                 <label for="achevement">Mon bâtiment est achevé</label>
                                             </div>
                                             <div class="fr-radio-group">
-                                                <input type="radio" value= "achevement_previsible" id="achevement_previsible" name="achevement"class="achevement_choice_button">
+                                                <input type="radio" value= "achevement_previsible" id="achevement_previsible" name="achevement"class="achevement_choice_button"
+                                                    {% if convention.programme.date_achevement_previsible and convention.programme.date_achevement is None %} checked {% endif %}
+                                                >
                                                 <label for="achevement_previsible">Mon bâtiment est en construction</label>
                                             </div>
                                         </div>
                                         <script type="text/javascript" nonce="{{request.csp_nonce}}">
                                             document.addEventListener('DOMContentLoaded', function () {
                                                 document.querySelectorAll(".achevement_choice_button").forEach(buttonChoice => {
+                                                    var valueChoice = buttonChoice.value;
+                                                    if (buttonChoice.hasAttribute("checked")) {
+                                                        document.querySelectorAll(".div_date_choice").forEach(div => {
+                                                            div.setAttribute("hidden", "")
+                                                        })
+                                                        document.getElementById(valueChoice+"_date").removeAttribute("hidden");
+                                                    };
                                                     buttonChoice.addEventListener("click", () => {
                                                         document.querySelectorAll(".div_date_choice").forEach(div => {
                                                             div.setAttribute("hidden", "")
                                                         })
-                                                        var valueChoice = buttonChoice.value;
                                                         document.getElementById(valueChoice+"_date").removeAttribute("hidden");
                                                     })
                                                 })
